# zero-native-rust

./: Cargo.toml  README.md  build.rs
src/: app_dirs.rs  app_manifest.rs  assets.rs  automation.rs  bridge.rs  debug.rs  diagnostics.rs  embed.rs  extensions.rs  frontend.rs  geometry.rs  js.rs  json.rs  lib.rs  platform.rs  platform_backends.rs  platform_info.rs  policy_values.rs  runtime.rs  security.rs  trace.rs  window_state.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/tooling/: automation_cli.rs  bundle_assets.rs  cef.rs  codesign.rs  dev.rs  doctor.rs  manifest.rs  mod.rs  package.rs  raw_manifest.rs  templates.rs  web_engine.rs
