[package]
name = "zero-native"
version = "0.1.9"
edition = "2021"
description = "Rust desktop app shell with WebView — tiny binaries, minimal memory, instant rebuilds"
license = "Apache-2.0"
repository = "https://github.com/vercel-labs/zero-native"

[dependencies]
sha2 = "0.10"

[build-dependencies]
bindgen = "0.71"
cc = "1.2"

[features]
default = []
cef = []

[lib]
name = "zero_native"
path = "src/lib.rs"

[[bin]]
name = "zero-native"
path = "src/bin/zero-native.rs"
